[project]
name="genice2"
dynamic=["version"]

[project.urls]
"Homepage" = "https://github.com/vitroid/GenIce"
"Bug Tracker" = "https://github.com/vitroid/GenIce/issues"
"manual" = "https://vitroid.github.io/GenIce"

[tool.genice.urls]
repository = "https://github.com/vitroid/GenIce"
logo = "https://raw.githubusercontent.com/vitroid/GenIce/develop/logo/genice-v0.png"

[tool.poetry]
name = "genice2"
version = "2.2.9" # master version variable
# 1st: major version
# 2nd: minor version (refactorization)
# 3rd: minor changes (new plugin, etc.)
# 4th: bug fix.
authors = [
  "Masakazu Matsumoto <vitroid@gmail.com>",
]
description = "A Swiss army knife to generate hydrogen-disordered ice structures."
readme = "README.md"
license = "MIT"
# a kind of src-layout; .genice2 is generated automatically.
packages = [
  { include = "genice2", from = ".genice2", to = "" }
]

# poetry install to make them work
[tool.poetry.scripts]
genice2 = "genice2.cli.genice:main"
analice2 = "genice2.cli.analice:main"

[tool.poetry.dependencies]
"networkx" = ">=2.0.dev20160901144005"
"python" = ">=3.11,<3.14"
numpy = "^2.0"
pairlist = ">=0.6"
cycless = ">=0.4.2"
graphstat = ">=0.3.3"
yaplotlib = ">=0.1.2"
openpyscad = ">=0.5.0"
genice-core = ">=1.1"
icecream = "^2.1.4"
sf-hamilton = "^1.89.0"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
ipykernel = "^6.27.1"
py3dmol = "^2.0.4"
matplotlib = "^3.8.2"
genice2-svg = "^2.2"
plotly = "^5.18.0"
nbformat = "^5.9.2"
genice2-mdanalysis = "^0.6.5"
requests = "^2.31.0"
pytest = "^8.1.1"
genice2-cif = "^2.2.1"
genice2-cage = ">=2.4.4"
dagster = "^1.8.0"
dagster-webserver = "^1.8.0"



# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.version]
# path = "genice2/__init__.py"
jinja2 = "^3.1.4"

