[project]
name="genice3"
version = "3.0.a1"
description = "A Swiss army knife to generate hydrogen-disordered ice structures."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Masakazu Matsumoto", email = "vitroid@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "networkx>=2.0.dev20160901144005",
    "numpy>=2.0",
    "pairlist>=0.6",
    "cycless>=0.4.2",
    "graphstat>=0.3.3",
    "yaplotlib>=0.1.2",
    "openpyscad>=0.5.0",
    "genice-core>=1.1",
    "pyyaml>=6.0",
    "jinja2>=3.1.4",
    "cif2ice (>=0.4.1,<0.5.0)",
]

[project.optional-dependencies]
dev = [
    "toml>=0.10.2",
    "ipykernel>=6.27.1",
    "py3dmol>=2.0.4",
    "matplotlib>=3.8.2",
    "genice2-svg>=2.2",
    "plotly>=5.18.0",
    "nbformat>=5.9.2",
    "genice2-mdanalysis>=0.6.5",
    "requests>=2.31.0",
    "pytest>=8.1.1",
    "genice2-cif>=2.2.1",
]

[project.scripts]
genice3 = "genice3.cli.genice:main"

[project.urls]
"Homepage" = "https://github.com/vitroid/GenIce"
"Bug Tracker" = "https://github.com/vitroid/GenIce/issues"
"manual" = "https://vitroid.github.io/GenIce"

[tool.genice.urls]
repository = "https://github.com/vitroid/GenIce"
logo = "https://raw.githubusercontent.com/vitroid/GenIce/develop/logo/genice-v0.png"

[tool.poetry]
name = "genice3"
version = "3.0.a1" # master version variable
# 1st: major version
# 2nd: minor version (refactorization)
# 3rd: minor changes (new plugin, etc.)
# 4th: bug fix.
authors = [
  "Masakazu Matsumoto <vitroid@gmail.com>",
]
description = "A Swiss army knife to generate hydrogen-disordered ice structures."
readme = "README.md"
license = "MIT"
# genice3 package
packages = [
  { include = "genice3" }
]

# poetry install to make them work
[tool.poetry.scripts]
genice3 = "genice3.cli.genice:main"

[tool.poetry.dependencies]
"networkx" = ">=2.0.dev20160901144005"
"python" = ">=3.11,<3.14"
numpy = "^2.0"
pairlist = ">=0.6"
cycless = ">=0.4.2"
graphstat = ">=0.3.3"
yaplotlib = ">=0.1.2"
openpyscad = ">=0.5.0"
genice-core = ">=1.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
nbformat = "^5.9.2"
requests = "^2.31.0"
pytest = "^8.1.1"



[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["genice3*"]
exclude = ["tests*", "examples*", "docs*", "Utilities*", "*.tests*", "*.test*", "genice2*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

