[tool.poetry]
name = "genice2"
version = "2.2.12.4" # master version variable
# 1st: major version
# 2nd: minor version (refactorization)
# 3rd: minor changes (new plugin, etc.)
# 4th: bug fix.
authors = [
  "Masakazu Matsumoto <vitroid@gmail.com>",
]
description = "A Swiss army knife to generate hydrogen-disordered ice structures."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/vitroid/GenIce"
repository = "https://github.com/vitroid/GenIce"
documentation = "https://vitroid.github.io/GenIce"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vitroid/GenIce/issues"

[tool.genice.urls]
repository = "https://github.com/vitroid/GenIce"
logo = "https://raw.githubusercontent.com/vitroid/GenIce/develop/logo/genice-v0.png"

# symlinkを実ファイルに変換
packages = [
  { include = "genice2" }
]
# .gitignoreで除外するが、ビルドには必要。
include = ["genice2/*","genice2/*/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# poetry install to make them work
[tool.poetry.scripts]
genice2 = "genice2.cli.genice:main"
analice2 = "genice2.cli.analice:main"

[tool.poetry.dependencies]
"networkx" = ">=2.0.dev20160901144005"
"python" = "^3.10"
numpy = "^2.0"
pairlist = ">=0.6"
cycless = ">=0.4.2"
graphstat = ">=0.3.3"
yaplotlib = ">=0.1.2"
openpyscad = ">=0.5.0"
genice-core = ">=1.1"
deprecation = "^2.1.0"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
ipykernel = "^6.27.1"
py3dmol = "^2.0.4"
matplotlib = "^3.8.2"
genice2-svg = "^2.2"
plotly = "^5.18.0"
nbformat = "^5.9.2"
genice2-mdanalysis = "^0.6.5"
requests = "^2.31.0"
pytest = "^8.1.1"
genice2-cif = "^2.2.1"
genice2-cage = ">=2.4.4"

# [tool.hatch.version]
# path = "genice2/__init__.py"
jinja2 = "^3.1.4"

